# showme

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AUTHORS  HISTORY.rst  LICENSE  MANIFEST.in  NOTICE  README.mkd  README.rst  ROADMAP.rst  environment.yml  fabfile.py  pyproject.toml  reqs.txt  requirements.txt  setup.cfg  setup.py  test.py
show/: core.py
showme/: __init__.py  core.py
showme/tests/: test_cputime.py  test_docs.py  test_globals.py  test_locals.py  test_time.py  test_trace.py
src/showme/: __init__.py  __main__.py
tests/: conftest.py  test_cputime.py  test_docs.py  test_time.py  test_trace.py
