[metadata]
name = showme
version = 1.0.1
description = Painless Debugging and Inspection for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/a-t-0/snncompare
author = Navdeep Gill
author_email = mr.navdeepgill@gmail.com
maintainer = Navdeep Gill
maintainer_email = mr.navdeepgill@gmail.com
license = MIT
license_file = licence
classifiers =
    Development Status :: 5 - Production/Stable,
	Environment :: Console,
	Intended Audience :: Developers,
	License :: OSI Approved :: MIT License,
	Programming Language :: Python,
	Programming Language :: Python :: 2.5,
	Programming Language :: Python :: 2.6,
	Programming Language :: Python :: 2.7,
	Operating System :: MacOS :: MacOS X,
	Operating System :: Unix,
	Operating System :: POSIX,
	Topic :: Software Development,
	Topic :: Software Development :: Libraries,
	Topic :: Software Development :: Libraries :: Python Modules,

[options]
packages = find:
package_dir =
    =showme
# Dependencies

[options.packages.find]
where = showme

[options.entry_points]
console_scripts =
    showme = showme:core

[bdist_wheel]
universal = 1